tests/snapshots/art_gallery.snap
---
source: tests/render_snapshots.rs
expression: "lines.join(\"\\n\")"
---
clear
     \│/  │    \|/  │ 
    ─(●)─ │   -(o)- │ \o/
     /│\  │    /|\  │ 
          │         │ 

clear-night
    · * · │   . * . │ 
     (●)  │    (o)  │ *o*
    * · * │   * . * │ 
          │         │ 

mainly-clear
     \│/  │    \|/  │ 
    ─(●)─ │   -(o)- │ \o_
     /│\  │    /|\  │ 
     ▁▁▁  │    ___  │ 

mainly-clear-night
    · * · │   . * . │ 
     (●)  │    (o)  │ *o_
    * · * │   * . * │ 
     ▁▁▁  │    ___  │ 

partly-cloudy
     \│/  │    \|/  │ 
   ╭───╮  │  .---.  │ ~o~
  (     ) │ (     ) │ 
   ╰───╯  │  '---'  │ 

partly-cloudy-night
    * · * │   * . * │ 
   ╭───╮  │  .---.  │ ~*~
  (     ) │ (     ) │ 
   ╰───╯  │  '---'  │ 

overcast
   ╭───╮  │  .---.  │ 
  ╭╯   ╰╮ │ /.   .\ │ ~~~
  (     ) │ (     ) │ 
  ╰─────╯ │ '-----' │ 

unknown
   · · ·  │  . . .  │ 
  ·  ?  · │ .  ?  . │ ???
   · · ·  │  . . .  │ 
          │         │ 

fog
   ─────  │  -----  │ 
    ───── │   ----- │ ===
   ─────  │  -----  │ 
          │         │ 

rime-fog
   ──*──  │  --*--  │ 
    ──*── │   --*-- │ =*=
   ──*──  │  --*--  │ 
          │         │ 

drizzle-light
   ╭───╮  │  .---.  │ 
  (     ) │ (     ) │ ~.~
   ╰───╯  │  '---'  │ 
     .    │    .    │ 

drizzle
   ╭───╮  │  .---.  │ 
  (     ) │ (     ) │ ~,~
   ╰───╯  │  '---'  │ 
    . .   │   . .   │ 

drizzle-dense
   ╭───╮  │  .---.  │ 
  (     ) │ (     ) │ .,.
   ╰───╯  │  '---'  │ 
   . . .  │  . . .  │ 

freezing-drizzle-light
   ╭───╮  │  .---.  │ 
  (     ) │ (     ) │ ~.=
   ╰───╯  │  '---'  │ 
     +    │    +    │ 

freezing-drizzle-dense
   ╭───╮  │  .---.  │ 
  (     ) │ (     ) │ .,=
   ╰───╯  │  '---'  │ 
    + +   │   + +   │ 

rain-light
   ╭───╮  │  .---.  │ 
  (     ) │ (     ) │ ~/~
   ╰───╯  │  '---'  │ 
     /    │    /    │ 

rain
   ╭───╮  │  .---.  │ 
  (     ) │ (     ) │ ~|~
   ╰───╯  │  '---'  │ 
    / /   │   / /   │ 

rain-heavy
   ╭───╮  │  .---.  │ 
  (     ) │ (     ) │ /|/
   ╰───╯  │  '---'  │ 
    ///   │   ///   │ 

freezing-rain-light
   ╭───╮  │  .---.  │ 
  (     ) │ (     ) │ ~+~
   ╰───╯  │  '---'  │ 
    /+    │   /+    │ 

freezing-rain-heavy
   ╭───╮  │  .---.  │ 
  (     ) │ (     ) │ +|+
   ╰───╯  │  '---'  │ 
   /+/+   │  /+/+   │ 

snow-light
   ╭───╮  │  .---.  │ 
  (     ) │ (     ) │ ~+~
   ╰───╯  │  '---'  │ 
     *    │    *    │ 

snow
   ╭───╮  │  .---.  │ 
  (     ) │ (     ) │ ~*~
   ╰───╯  │  '---'  │ 
    * *   │   * *   │ 

snow-heavy
   ╭───╮  │  .---.  │ 
  (     ) │ (     ) │ *|*
   ╰───╯  │  '---'  │ 
   * * *  │  * * *  │ 

snow-grains
   ╭───╮  │  .---.  │ 
  (     ) │ (     ) │ ...
   ╰───╯  │  '---'  │ 
    · ·   │   . .   │ 

showers-rain-light
     \│/  │    \|/  │ 
   ╭───╮  │  .---.  │ o,~
  (     ) │ (     ) │ 
     /    │    /    │ 

showers-rain
     \│/  │    \|/  │ 
   ╭───╮  │  .---.  │ o|~
  (     ) │ (     ) │ 
    / /   │   / /   │ 

showers-rain-violent
     \│/  │    \|/  │ 
   ╭───╮  │  .---.  │ o||
  (     ) │ (     ) │ 
    ///   │   ///   │ 

showers-snow-light
     \│/  │    \|/  │ 
   ╭───╮  │  .---.  │ o+~
  (     ) │ (     ) │ 
     *    │    *    │ 

showers-snow-heavy
     \│/  │    \|/  │ 
   ╭───╮  │  .---.  │ o**
  (     ) │ (     ) │ 
    * *   │   * *   │ 

thunderstorm
   ╭───╮  │  .---.  │ 
  (     ) │ (     ) │ ~!~
   ╰──╮   │  '--.   │ 
    ╲╱    │   \/    │ 

thunderstorm-hail-light
   ╭───╮  │  .---.  │ 
  (     ) │ (     ) │ ~!o
   ╰──╮   │  '--.   │ 
    ╲╱ o  │   \/ o  │ 

thunderstorm-heavy
   ╭───╮  │  .---.  │ 
  (     ) │ (     ) │ !|!
   ╰──╮   │  '--.   │ 
   ╲╱╲    │  \/\    │ 

thunderstorm-hail-heavy
   ╭───╮  │  .---.  │ 
  (     ) │ (     ) │ !oo
   ╰──╮   │  '--.   │ 
   ╲╱ oo  │  \/ oo  │
