tests/snapshots/art_table_all_conditions_d8_w80.snap
---
source: tests/render_snapshots.rs
expression: "render(case(\"all-conditions.json\", UnitSystem::Metric, 80))"
---
Weather report: Beijing, Beijing, China (39.90, 116.41)

   \│/  Partly cloudy
 ╭───╮  +20°C (+21°C)
(     ) → 12km/h ENE
 ╰───╯  55% 1014hPa 12km 0.0mm

┌───────────────────────┬───────────────────────┬───────────────────────┐
│ Today, Sep 30         │ Thu 01 Oct            │ Fri 02 Oct            │
├───────────────────────┼───────────────────────┼───────────────────────┤
│    \│/  Morning       │  ─────  Morning       │  ╭───╮  Morning       │
│   ─(●)─ +18°C (+17°C) │   ───── +12°C (+11°C) │ (     ) +3°C (+1°C)   │
│    /│\  → 8.0km/h E   │  ─────  → 6.0km/h ENE │  ╰───╯  ↗ 12km/h NNE  │
│         0.0mm 5%      │         0.0mm 10%     │  . . .  1.5mm 80%     │
├───────────────────────┼───────────────────────┼───────────────────────┤
│    \│/  Noon          │  ──*──  Noon          │  ╭───╮  Noon          │
│   ─(●)─ +23°C (+24°C) │   ──*── +14°C (+13°C) │ (     ) +1°C (-1°C)   │
│    /│\  ↘ 13km/h ESE  │  ──*──  → 8.0km/h E   │  ╰───╯  ↗ 14km/h NNE  │
│    ▁▁▁  0.0mm 5%      │         0.0mm 10%     │    +    0.4mm 65%     │
├───────────────────────┼───────────────────────┼───────────────────────┤
│    \│/  Evening       │  ╭───╮  Evening       │  ╭───╮  Evening       │
│  ╭───╮  +20°C (+20°C) │ (     ) +13°C (+12°C) │ (     ) +0°C (-2°C)   │
│ (     ) ↓ 10km/h SSE  │  ╰───╯  → 9.0km/h E   │  ╰───╯  ↗ 15km/h NE   │
│  ╰───╯  0.0mm 10%     │    .    0.2mm 60%     │   + +   1.2mm 75%     │
├───────────────────────┼───────────────────────┼───────────────────────┤
│  ╭───╮  Night         │  ╭───╮  Night         │  ╭───╮  Night         │
│ ╭╯   ╰╮ +16°C (+15°C) │ (     ) +11°C (+10°C) │ (     ) +2°C (+0°C)   │
│ (     ) ↙ 6.0km/h SSW │  ╰───╯  → 10km/h E    │  ╰───╯  ↗ 13km/h NE   │
│ ╰─────╯ 0.0mm 15%     │   . .   0.8mm 70%     │    /    1.0mm 80%     │
└───────────────────────┴───────────────────────┴───────────────────────┘

┌───────────────────────┬───────────────────────┬───────────────────────┐
│ Sat 03 Oct            │ Sun 04 Oct            │ Mon 05 Oct            │
├───────────────────────┼───────────────────────┼───────────────────────┤
│  ╭───╮  Morning       │  ╭───╮  Morning       │    \│/  Morning       │
│ (     ) +4°C (+2°C)   │ (     ) -2°C (-6°C)   │  ╭───╮  +6°C (+4°C)   │
│  ╰───╯  → 16km/h ENE  │  ╰───╯  ↑ 14km/h N    │ (     ) ↗ 15km/h NE   │
│   / /   3.0mm 85%     │    *    0.8mm 70%     │    /    1.0mm 70%     │
├───────────────────────┼───────────────────────┼───────────────────────┤
│  ╭───╮  Noon          │  ╭───╮  Noon          │    \│/  Noon          │
│ (     ) +6°C (+4°C)   │ (     ) -1°C (-5°C)   │  ╭───╮  +9°C (+8°C)   │
│  ╰───╯  → 20km/h ENE  │  ╰───╯  ↗ 16km/h NNE  │ (     ) → 18km/h ENE  │
│   ///   7.0mm 95%     │   * *   2.5mm 80%     │   / /   2.5mm 80%     │
├───────────────────────┼───────────────────────┼───────────────────────┤
│  ╭───╮  Evening       │  ╭───╮  Evening       │    \│/  Evening       │
│ (     ) +2°C (+0°C)   │ (     ) -3°C (-7°C)   │  ╭───╮  +7°C (+5°C)   │
│  ╰───╯  → 15km/h E    │  ╰───╯  ↗ 18km/h NNE  │ (     ) → 22km/h ENE  │
│   /+    1.5mm 80%     │  * * *  5.0mm 90%     │   ///   6.0mm 90%     │
├───────────────────────┼───────────────────────┼───────────────────────┤
│  ╭───╮  Night         │  ╭───╮  Night         │    \│/  Night         │
│ (     ) +0°C (-2°C)   │ (     ) -5°C (-9°C)   │  ╭───╮  +3°C (+1°C)   │
│  ╰───╯  → 17km/h E    │  ╰───╯  ↗ 12km/h NE   │ (     ) → 16km/h E    │
│  /+/+   5.0mm 90%     │   · ·   0.6mm 75%     │    *    1.5mm 75%     │
└───────────────────────┴───────────────────────┴───────────────────────┘

┌───────────────────────┬───────────────────────┐
│ Tue 06 Oct            │ Wed 07 Oct            │
├───────────────────────┼───────────────────────┤
│    \│/  Morning       │  ╭───╮  Morning       │
│  ╭───╮  +1°C (-2°C)   │ (     ) +2°C (+0°C)   │
│ (     ) ↗ 18km/h NNE  │  ╰──╮   → 30km/h ENE  │
│   * *   4.0mm 85%     │  ╲╱ oo  10.0mm 95%    │
├───────────────────────┼───────────────────────┤
│  ╭───╮  Noon          │   ∿ ∿ ∿ Noon          │
│ (     ) +5°C (+3°C)   │   ∿ ∿ ∿ +6°C (+5°C)   │
│  ╰──╮   ↗ 24km/h NNE  │   ∿ ∿ ∿ → 10km/h ENE  │
│   ╲╱    5.0mm 90%     │         0.0mm 10%     │
├───────────────────────┼───────────────────────┤
│  ╭───╮  Evening       │    \│/  Evening       │
│ (     ) +4°C (+2°C)   │  ╭───╮  +5°C (+4°C)   │
│  ╰──╮   ↗ 26km/h NE   │ (     ) → 9.0km/h E   │
│   ╲╱ o  6.0mm 90%     │  ╰───╯  0.0mm 10%     │
├───────────────────────┼───────────────────────┤
│  ╭───╮  Night         │   · * · Night         │
│ (     ) +3°C (+1°C)   │    (●)  +3°C (+2°C)   │
│  ╰──╮   ↗ 28km/h NE   │   * · * → 6.0km/h E   │
│  ╲╱╲    8.0mm 95%     │         0.0mm 5%      │
└───────────────────────┴───────────────────────┘

Location data based on GeoNames (CC-BY-4.0) via Open-Meteo — https://open-meteo…
Data: Open-Meteo.com (CC BY 4.0) — https://open-meteo.com/
