tests/snapshots/art_table_colour_metric_d3_w80.snap
---
source: tests/render_snapshots.rs
expression: "render(Case\n{\n    color: ColorMode::Always,\n    ..case(\"beijing-3d-day.json\", UnitSystem::Metric, 80)\n})"
---
Weather report: Beijing, Beijing, China (39.90, 116.41)

[38;5;250m   \│/[0m  [38;5;250mPartly cloudy[0m
[38;5;250m ╭───╮[0m  [38;5;226m+22°C (+24°C)[0m
[38;5;250m(     )[0m [38;5;47m↗ 12km/h NE[0m
[38;5;250m ╰───╯[0m  [38;5;250m56%[0m [38;5;250m1013hPa[0m [38;5;250m10km[0m [38;5;250m0.0mm[0m

┌───────────────────────┬───────────────────────┬───────────────────────┐
│ Today, Sep 30         │ Thu 01 Oct            │ Fri 02 Oct            │
├───────────────────────┼───────────────────────┼───────────────────────┤
│ [38;5;220m   \│/[0m  [38;5;250mMorning[0m       │ [38;5;250m   \│/[0m  [38;5;250mMorning[0m       │ [38;5;250m ╭───╮[0m  [38;5;250mMorning[0m       │
│ [38;5;220m  ─(●)─[0m [38;5;118m+18°C (+17°C)[0m │ [38;5;250m ╭───╮[0m  [38;5;118m+17°C (+16°C)[0m │ [38;5;250m╭╯   ╰╮[0m [38;5;47m+14°C (+13°C)[0m │
│ [38;5;220m   /│\[0m  [38;5;47m→ 8.0km/h E[0m   │ [38;5;250m(     )[0m [38;5;47m→ 9.0km/h E[0m   │ [38;5;250m(     )[0m [38;5;47m→ 7.0km/h ENE[0m │
│         [38;5;250m0.0mm 10%[0m     │ [38;5;250m ╰───╯[0m  [38;5;39m0.2mm 40%[0m     │ [38;5;250m╰─────╯[0m [38;5;250m0.0mm 20%[0m     │
├───────────────────────┼───────────────────────┼───────────────────────┤
│ [38;5;220m   \│/[0m  [38;5;250mNoon[0m          │ [38;5;250m ╭───╮[0m  [38;5;250mNoon[0m          │ [38;5;245m ─────[0m  [38;5;250mNoon[0m          │
│ [38;5;220m  ─(●)─[0m [38;5;226m+24°C (+25°C)[0m │ [38;5;250m╭╯   ╰╮[0m [38;5;226m+21°C (+21°C)[0m │ [38;5;245m  ─────[0m [38;5;118m+19°C (+19°C)[0m │
│ [38;5;220m   /│\[0m  [38;5;47m↘ 14km/h ESE[0m  │ [38;5;250m(     )[0m [38;5;47m↘ 15km/h ESE[0m  │ [38;5;245m ─────[0m  [38;5;47m→ 10km/h ENE[0m  │
│ [38;5;220m   ▁▁▁[0m  [38;5;250m0.0mm 5%[0m      │ [38;5;250m╰─────╯[0m [38;5;39m1.2mm 55%[0m     │         [38;5;250m0.0mm 15%[0m     │
├───────────────────────┼───────────────────────┼───────────────────────┤
│ [38;5;250m   \│/[0m  [38;5;250mEvening[0m       │ [38;5;33m ╭───╮[0m  [38;5;250mEvening[0m       │ [38;5;250m   \│/[0m  [38;5;250mEvening[0m       │
│ [38;5;250m ╭───╮[0m  [38;5;226m+20°C (+20°C)[0m │ [38;5;33m(     )[0m [38;5;118m+18°C (+17°C)[0m │ [38;5;250m ╭───╮[0m  [38;5;118m+16°C (+15°C)[0m │
│ [38;5;250m(     )[0m [38;5;47m↓ 10km/h SSE[0m  │ [38;5;33m ╰───╯[0m  [38;5;47m↘ 18km/h SE[0m   │ [38;5;250m(     )[0m [38;5;47m↗ 8.0km/h NE[0m  │
│ [38;5;250m ╰───╯[0m  [38;5;250m0.0mm 10%[0m     │ [38;5;33m   /[0m    [38;5;33m4.5mm 75%[0m     │ [38;5;250m ╰───╯[0m  [38;5;250m0.0mm 10%[0m     │
├───────────────────────┼───────────────────────┼───────────────────────┤
│ [38;5;220m  · * ·[0m [38;5;250mNight[0m         │ [38;5;33m ╭───╮[0m  [38;5;250mNight[0m         │ [38;5;220m  · * ·[0m [38;5;250mNight[0m         │
│ [38;5;220m   (●)[0m  [38;5;118m+15°C (+14°C)[0m │ [38;5;33m(     )[0m [38;5;118m+16°C (+15°C)[0m │ [38;5;220m   (●)[0m  [38;5;47m+12°C (+11°C)[0m │
│ [38;5;220m  * · *[0m [38;5;47m↙ 6.0km/h SSW[0m │ [38;5;33m ╰───╯[0m  [38;5;226m↓ 20km/h SSE[0m  │ [38;5;220m  * · *[0m [38;5;47m↗ 5.0km/h NE[0m  │
│         [38;5;250m0.0mm 5%[0m      │ [38;5;33m  / /[0m   [38;5;33m6.0mm 80%[0m     │         [38;5;250m0.0mm 5%[0m      │
└───────────────────────┴───────────────────────┴───────────────────────┘

Location data based on GeoNames (CC-BY-4.0) via Open-Meteo — https://open-meteo…
Data: Open-Meteo.com (CC BY 4.0)
