tests/snapshots/art_table_colour_us_d1_w80.snap
---
source: tests/render_snapshots.rs
expression: "render(Case\n{ color: ColorMode::Always, ..case(\"beijing-1d.json\", UnitSystem::Us, 80) })"
---
Weather report: Beijing, Beijing, China (39.90, 116.41)

[38;5;220m   \│/[0m  [38;5;220mMainly clear[0m
[38;5;220m  ─(●)─[0m [38;5;226m+71°F (+72°F)[0m
[38;5;220m   /│\[0m  [38;5;47m↗ 6.2mph NNE[0m
[38;5;220m   ▁▁▁[0m  [38;5;250m52%[0m [38;5;250m29.97inHg[0m [38;5;250m8.7mi[0m [38;5;250m0.00in[0m

┌───────────────────────┐
│ Today, Sep 30         │
├───────────────────────┤
│ [38;5;220m   \│/[0m  [38;5;250mMorning[0m       │
│ [38;5;220m  ─(●)─[0m [38;5;118m+63°F (+61°F)[0m │
│ [38;5;220m   /│\[0m  [38;5;47m→ 4.3mph E[0m    │
│         [38;5;250m0.00in 10%[0m    │
├───────────────────────┤
│ [38;5;220m   \│/[0m  [38;5;250mNoon[0m          │
│ [38;5;220m  ─(●)─[0m [38;5;226m+73°F (+74°F)[0m │
│ [38;5;220m   /│\[0m  [38;5;47m↘ 7.5mph SE[0m   │
│ [38;5;220m   ▁▁▁[0m  [38;5;250m0.00in 5%[0m     │
├───────────────────────┤
│ [38;5;250m   \│/[0m  [38;5;250mEvening[0m       │
│ [38;5;250m ╭───╮[0m  [38;5;118m+66°F (+65°F)[0m │
│ [38;5;250m(     )[0m [38;5;47m↓ 5.6mph S[0m    │
│ [38;5;250m ╰───╯[0m  [38;5;250m0.00in 10%[0m    │
├───────────────────────┤
│ [38;5;250m ╭───╮[0m  [38;5;250mNight[0m         │
│ [38;5;250m╭╯   ╰╮[0m [38;5;47m+57°F (+55°F)[0m │
│ [38;5;250m(     )[0m [38;5;47m↙ 3.7mph SSW[0m  │
│ [38;5;250m╰─────╯[0m [38;5;250m0.00in 5%[0m     │
└───────────────────────┘

Location data based on GeoNames (CC-BY-4.0) via Open-Meteo — https://open-meteo…
Data: Open-Meteo.com (CC BY 4.0) — https://open-meteo.com/
