tests/snapshots/art_table_dumb_d3_w80.snap
---
source: tests/render_snapshots.rs
expression: "render(Case\n{\n    format: Format::Dumb,\n    ..case(\"beijing-3d-day.json\", UnitSystem::Metric, 80)\n})"
---
Weather report: Beijing, Beijing, China (39.90, 116.41)

   \|/  Partly cloudy
 .---.  +22C (+24C)
(     ) / 12km/h NE
 '---'  56% 1013hPa 10km 0.0mm

+-----------------------+-----------------------+-----------------------+
| Today, Sep 30         | Thu 01 Oct            | Fri 02 Oct            |
+-----------------------+-----------------------+-----------------------+
|    \|/  Morning       |    \|/  Morning       |  .---.  Morning       |
|   -(o)- +18C (+17C)   |  .---.  +17C (+16C)   | /.   .\ +14C (+13C)   |
|    /|\  > 8.0km/h E   | (     ) > 9.0km/h E   | (     ) > 7.0km/h ENE |
|         0.0mm 10%     |  '---'  0.2mm 40%     | '-----' 0.0mm 20%     |
+-----------------------+-----------------------+-----------------------+
|    \|/  Noon          |  .---.  Noon          |  -----  Noon          |
|   -(o)- +24C (+25C)   | /.   .\ +21C (+21C)   |   ----- +19C (+19C)   |
|    /|\  \ 14km/h ESE  | (     ) \ 15km/h ESE  |  -----  > 10km/h ENE  |
|    ___  0.0mm 5%      | '-----' 1.2mm 55%     |         0.0mm 15%     |
+-----------------------+-----------------------+-----------------------+
|    \|/  Evening       |  .---.  Evening       |    \|/  Evening       |
|  .---.  +20C (+20C)   | (     ) +18C (+17C)   |  .---.  +16C (+15C)   |
| (     ) v 10km/h SSE  |  '---'  \ 18km/h SE   | (     ) / 8.0km/h NE  |
|  '---'  0.0mm 10%     |    /    4.5mm 75%     |  '---'  0.0mm 10%     |
+-----------------------+-----------------------+-----------------------+
|   . * . Night         |  .---.  Night         |   . * . Night         |
|    (o)  +15C (+14C)   | (     ) +16C (+15C)   |    (o)  +12C (+11C)   |
|   * . * , 6.0km/h SSW |  '---'  v 20km/h SSE  |   * . * / 5.0km/h NE  |
|         0.0mm 5%      |   / /   6.0mm 80%     |         0.0mm 5%      |
+-----------------------+-----------------------+-----------------------+

Location data based on GeoNames (CC-BY-4.0) via Open-Meteo -- https://open-me...
Data: Open-Meteo.com (CC BY 4.0) -- https://open-meteo.com/
